--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "formik": "^2.4.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.11.0",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.26.10",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
